# ctd

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
config/: ctd.example.yaml  tag_mappings.example.csv
src/: config.hpp  config_parser.cpp  config_parser.hpp  ctd.cpp
systemd/: ctd.example.service
